# wavebench

./: .gitignore  README.md  pyproject.toml  release-notes-v0.2.0.md  release-notes-v0.3.0.md  release-notes-v0.4.0.md  wavebench.example.toml
doc/: DG4202_任意波形命令确认表.md  README.md  README_EN.md  RTM2000_VISA_SCPI_手册摘录.md  RTM2032_MVP命令确认表.md  WaveBench_CLI形态.md  WaveBench_DP800电源只读接入设计.md  WaveBench_DP800电源显式设置设计.md  WaveBench_DP800电源输出控制设计.md  WaveBench_run_plan_使用指南.md  WaveBench_sweep状态恢复设计.md  WaveBench_v0.2_收口清单.md  WaveBench_v0.2_路线图.md  WaveBench_v0.3_收口清单.md  WaveBench_v0.3_路线图.md  WaveBench_v0.4_路线图.md  WaveBench_v0.4_闭环验证记录.md  WaveBench_多仪器协同流程设计.md  WaveBench_数据输出格式.md  WaveBench_示波器采集模块设计草案.md  WaveBench_设备抽象层.md  WaveBench_配置文件格式.md  WaveBench_错误处理和日志策略.md
plans/: closure_sine_1k.toml  closure_sine_1k_fft.toml  closure_triangle_1k.toml  demo_dg4202_10k_screenshot_report.toml  dg4202_duty_10k_power_ch2_check.toml  dp800_scope_probe_voltage_steps.toml  dp800_voltage_steps.toml  example_dmm_acv_source_smoke.toml  example_scope_expect_quality.toml  example_source_scope_dmm_report.toml
scripts/: check_connection.py  dmm_acv_source_smoke.py  dmm_dcv_staircase_smoke.py
tests/: test_arbitrary.py  test_builtin_metadata_consistency.py  test_cli.py  test_config_overrides.py  test_dg4202.py  test_discovery.py  test_dm3000.py  test_dmm.py  test_dmm_service.py  test_doctor.py  test_dp800.py  test_ds1000z_plugin.py  test_ds1104.py  test_failed_package.py  test_instrument_capabilities.py  test_instrument_models.py  test_instrument_registry.py  test_mcp_http.py  test_multichannel_capture.py  (+26 more)
(+102 files in other folders)
