[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "wavebench"
version = "0.1.0"
description = "Lightweight VISA/SCPI measurement bench for contest debugging"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Scaxlibur" }]
dependencies = ["RsInstrument>=1.90.0", "numpy>=2.0.0", "pyvisa-py>=0.8.1"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
wavebench = "wavebench.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

