[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "wavebench"
version = "0.8.0"
description = "Lightweight VISA/SCPI measurement bench for contest debugging"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Scaxlibur" }]
dependencies = ["RsInstrument>=1.90.0", "numpy>=2.0.0", "packaging>=24.0", "pyserial>=3.5", "pyvisa-py>=0.8.1"]

[project.optional-dependencies]
dev = ["hatchling==1.30.1", "pytest>=8.0.0", "ruff==0.15.20"]
tui = ["textual>=0.86.0"]

[project.scripts]
wavebench = "wavebench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wavebench"]

[tool.hatch.build.targets.sdist]
exclude = ["/doc/instruments"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
